Update registration redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </select>
                 <input type="hidden" name="_subject" value="New Registration: HR Trainee Webinar">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://yourusername.github.io/your-repo-name/thank-you.html">
+                <input type="hidden" name="_next" value="https://madhulikaayadav-kampushr.github.io/hr-trainee-webinar/thank-you.html">
                 <button type="submit" class="btn-orange" style="width:100%; margin-top:20px;">Register Now & Secure My Spot</button>
             </form>
             
